<resources>
    <string name="app_name">Start Designs</string>

    <!--onboarding designs-->
    <string name="onboardingWelcomeContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="onboardingSpinWinContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="onboardingRecommenderContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="onboarding_welcome_3">Welcome 3</string>
    <string name="onboarding_welcome_2">Welcome 2</string>
    <string name="onboarding_welcome_1">Welcome</string>
    <string name="s10">10:05</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="usage_today">Usage today</string>
    <string name="light">Light</string>
    <string name="sound">Sound</string>
    <string name="fans">Fans</string>
    <string name="heater">Heater</string>
    <string name="pm6">6 pm</string>
    <string name="pm7">7 pm</string>
    <string name="pm1">1 pm</string>
    <string name="am2">2 am</string>
    <string name="am3">3 am</string>
    <string name="am4">4 am</string>
    <string name="am5">5 am</string>
    <string name="p70">70 %</string>
    <string name="home">home</string>
    <string name="textedes">The Perfect\nDream House\nfor you</string>
    <string name="btn">Welcome </string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter Your password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back_nlet_s_continue_to_control_your_house">Welcome back!\nLet\'s continue to control your house</string>
    <string name="already_have_an_account">Already have an account?</string>

</resources>
